# sigconfide_poc

./: .gitignore  README.md  analyze_per_signature.py  benchmark_diaz_gay.py  compare_qp_nnls.py  compare_spa.py  plot_compare_spa_summary.py  plot_per_sig.py  plot_sbs_f1.py  plot_sbs_method.py  pyproject.toml
.github/workflows/: ci.yml  lint.yml  tests.yml
Supplementary_data_Diaz-Gay_et_al_2023_Benchmark/CN/: Samples_CN.txt  Samples_CN_noise10.txt  Samples_CN_noise5.txt  ground.truth.syn.exposures.CN.csv
Supplementary_data_Diaz-Gay_et_al_2023_Benchmark/DBS/: Samples_DBS.txt  Samples_DBS_noise10.txt  Samples_DBS_noise5.txt  ground.truth.syn.exposures.DBS.csv
Supplementary_data_Diaz-Gay_et_al_2023_Benchmark/ID/: Samples_ID.txt  Samples_ID_noise10.txt  Samples_ID_noise5.txt  ground.truth.syn.exposures.ID.csv
examples/: run_sbs_example.py
src/decompose/: __init__.py  nnls.py  qp.py
src/estimates/: bootstrap.py  crossvalidation.py  selection.py  standard.py
src/utils/: utils.py
tests/: conftest.py  test_bootstrap.py  test_cosmic_data.py  test_qp.py  test_selection.py  test_standard.py  test_utils.py
tests/data/: COSMIC_v3.6_SBS_GRCh37.txt
