[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sigconfide"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "quadprog",
    "pandas",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "ipykernel",
    "matplotlib",
]

[tool.setuptools]
packages = [
    "sigconfide",
    "sigconfide.decompose",
    "sigconfide.estimates",
    "sigconfide.utils",
]

[tool.setuptools.package-dir]
"sigconfide"            = "src"
"sigconfide.decompose"  = "src/decompose"
"sigconfide.estimates"  = "src/estimates"
"sigconfide.utils"      = "src/utils"
